--- a/index.html
+++ b/index.html
@@ -5,15 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- GOOGLE FONTS -->
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,400;0,500;0,600;0,700;1,100&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Inconsolata:wght@500&display=swap" rel="stylesheet"> 
     <!-- VUE.JS -->
     <script src="https://unpkg.com/vue@3/dist/vue.global.js"></script>
+    <!-- CUSTOM STYLE CSS -->
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <div id="app">
         <main>
-            <h1>
-                {{ message }}
-            </h1>
+            <div class="d-flex">
+                <img :src="image" alt="vue.logo">
+                <h1>
+                    {{ title }}
+                </h1>
+            </div>
+            <p>
+                {{ text }}
+            </p>      
         </main>
     </div>
     
